--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,18 +25,21 @@ FastTrackIT 2015
 
   <div id="header">
       <div id="sitebranding">
-          <h1>FastTrackIT.org</h1>
+          <h1>FCSB(Fac ce spune Becali)</h1>
       </div>
       <div id="tagline">
-          <p>Welcome to NumGuess 2016!</p>
+          <p>Ghiceste cel mai prost jucator !</p>
       </div>
   </div>
+  <div id="becali">
+      <img src="images.jpeg">
+  </div>
   <div id="navigation">
-      <a href="javascript:guessLink(1)">It could be 1</a></br>
-      <a href="javascript:guessLink(2)">It could be 2</a></br>
-      <a href="javascript:guessLink(3)">It could be 3</a></br>
-      <a href="javascript:guessLink(4)">It could be 4</a></br>
-      <a href="javascript:guessLink(5)">It could be 5</a></br>
+      <a href="javascript:guessLink(1)"> Cristi Tanase </a></br>
+      <a href="javascript:guessLink(2)"> Constantin Budescu </a></br>
+      <a href="javascript:guessLink(3)"> Mihai Balasa </a></br>
+      <a href="javascript:guessLink(4)"> Denis Alibec</a></br>
+      <a href="javascript:guessLink(5)"> Romario Benzar</a></br>
   </div>
   <div id="bodycontent">
       <div id="form">
@@ -53,12 +56,14 @@ FastTrackIT 2015
   <div id="serverResponse"></div>
 
   <div id="postcontent">
-      <a href="javascript:guessLink(6)">It could be 6</a></br>
-      <a href="javascript:guessLink(7)">It could be 7</a></br>
-      <a href="javascript:guessLink(8)">It could be 8</a></br>
-      <a href="javascript:guessLink(9)">It could be 9</a></br>
-      <a href="javascript:guessLink(10)">It could be 10</a></br>
+      <a href="javascript:guessLink(6)"> Mihai Pintili </a></br>
+      <a href="javascript:guessLink(7)"> Denis Mann </a></br>
+      <a href="javascript:guessLink(8)"> Ionut Larie </a></br>
+      <a href="javascript:guessLink(9)"> Lucian Filip</a></br>
+      <a href="javascript:guessLink(10)"> Gabriel Enache</a></br>
   </div>
+
+  <div id="picturecontent">n</div>
 
   </body>
 </html>
