--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,11 +35,17 @@ FastTrackIT 2015
       <img src="images.jpeg">
   </div>
   <div id="navigation">
-      <a href="javascript:guessLink(1)"> Cristi Tanase </a></br>
-      <a href="javascript:guessLink(2)"> Constantin Budescu </a></br>
-      <a href="javascript:guessLink(3)"> Mihai Balasa </a></br>
-      <a href="javascript:guessLink(4)"> Denis Alibec</a></br>
-      <a href="javascript:guessLink(5)"> Romario Benzar</a></br>
+      <a href="javascript:guessLink(1)"> 1.Cristi Tanase &nbsp</a>
+
+      <a href="javascript:guessLink(2)"> 2.Constantin Budescu </a>
+      <a href="javascript:guessLink(3)"> 3.Mihai Balasa </a>
+      <a href="javascript:guessLink(4)"> 4.Denis Alibec</a>
+      <a href="javascript:guessLink(5)"> 5.Romario Benzar</a>
+      <a href="javascript:guessLink(6)"> 6.Mihai Pintili </a>
+      <a href="javascript:guessLink(7)"> 7.Denis Mann </a>
+      <a href="javascript:guessLink(8)"> 8.Ionut Larie </a>
+      <a href="javascript:guessLink(9)"> 9.Lucian Filip</a>
+      <a href="javascript:guessLink(10)"> 10.Gabriel Enache</a>
   </div>
   <div id="bodycontent">
       <div id="form">
@@ -55,15 +61,9 @@ FastTrackIT 2015
 
   <div id="serverResponse"></div>
 
-  <div id="postcontent">
-      <a href="javascript:guessLink(6)"> Mihai Pintili </a></br>
-      <a href="javascript:guessLink(7)"> Denis Mann </a></br>
-      <a href="javascript:guessLink(8)"> Ionut Larie </a></br>
-      <a href="javascript:guessLink(9)"> Lucian Filip</a></br>
-      <a href="javascript:guessLink(10)"> Gabriel Enache</a></br>
-  </div>
 
-  <div id="picturecontent">n</div>
+
+  <div id="picturecontent"></div>
 
   </body>
 </html>
